--- a/styles/architect.css
+++ b/styles/architect.css
@@ -1,6 +1,19 @@
+/* shared styles */
+.btn-primary {
+  color: #fff;
+  text-align: center;
+  font-size: 1rem;
+  font-weight: 500;
+  border: none;
+  padding: 1.5rem;
+  border-radius: 8px;
+  background: #ff900e;
+  color: white;
+}
 /* header styles */
 
 header {
+  width: 100%;
   background: rgba(255, 144, 14, 0.1);
 }
 nav {
@@ -28,4 +41,41 @@ nav ul li a {
   text-align: center;
   font-size: 2.5rem;
   font-weight: 700;
+}
+.banner-container {
+  width: 100%;
+  text-align: center;
+}
+.banner-content {
+  width: 800px;
+  margin: 0 auto;
+}
+.banner-title {
+  color: #131313;
+  text-align: center;
+  margin: 5px auto;
+  font-size: 3.5rem;
+  font-weight: 700;
+}
+.banner-desc {
+  color: #727272;
+  text-align: center;
+  font-size: 1rem;
+  font-weight: 400;
+}
+.banner-container img {
+  width: 80%;
+  margin: 30px auto 100px auto;
+  padding-bottom: 10px;
+}
+
+/* responsive styles */
+@media screen and (max-width: 576px) {
+  nav {
+    flex-direction: column;
+    padding: 20px;
+  }
+  .banner-content {
+    width: 80%;
+  }
 }
