--- a/styles/architect.css
+++ b/styles/architect.css
@@ -110,7 +110,64 @@ main {
   font-size: 1rem;
   font-weight: 400;
 }
+.features {
+  margin: 100px auto;
+  gap: 100px;
+  width: 90%;
+  display: flex;
+}
+.feature-content h3 {
+  color: #131313;
+  font-size: 2.5rem;
+  font-weight: 700;
+  border-left: 5px solid #ff900e;
+  padding-left: 10px;
+  margin-bottom: 0px;
+}
+.feature-content p,
+.feature-card-container p {
+  color: #727272;
+  font-size: 1rem;
+  font-weight: 400;
+  margin-top: 15px;
+}
+.feature-img img {
+  width: 600px;
+  margin-left: 30px;
+}
 
+.feature-card-container .card {
+  border-radius: 8px;
+  background: #fff;
+  padding: 16px;
+  box-shadow: 0px 4px 30px 0px rgba(0, 0, 0, 0.06);
+}
+.feature-card-container h4 {
+  color: #131313;
+  font-size: 1rem;
+  font-weight: 600;
+}
+.experience-badge {
+  position: relative;
+  bottom: 130px;
+  width: 280px;
+  border-radius: 8px;
+  background: #ff900e;
+}
+.experience-badge h3 {
+  color: #fff;
+  text-align: center;
+  font-size: 4rem;
+  font-weight: 700;
+  margin-bottom: 5px;
+}
+.experience-badge p {
+  margin-top: 0px;
+  color: #fff;
+  text-align: center;
+  font-size: 1.25rem;
+  font-weight: 500;
+}
 /* responsive styles */
 @media screen and (max-width: 576px) {
   nav {
