--- a/styles/architect.css
+++ b/styles/architect.css
@@ -111,10 +111,10 @@ main {
   font-weight: 400;
 }
 .features {
-  margin: 100px auto;
+  display: flex;
+  margin: 80px auto;
   gap: 100px;
   width: 90%;
-  display: flex;
 }
 .feature-content h3 {
   color: #131313;
@@ -168,7 +168,57 @@ main {
   font-size: 1.25rem;
   font-weight: 500;
 }
+
+/*facts styles */
+.facts-content {
+  margin: 0px 100px;
+}
+.facts-title {
+  margin-top: 0px;
+  color: #131313;
+  font-size: 2.5rem;
+  font-weight: 700;
+  margin-bottom: 15px;
+}
+.facts-desc {
+  margin-top: 0px;
+  color: #727272;
+  font-size: 1rem;
+  font-weight: 400;
+}
+.facts-card-container {
+  margin-top: 80px;
+  display: flex;
+  justify-content: space-around;
+}
+.facts-card-container img {
+  width: 40px;
+  margin: 0 45%;
+}
+.facts-card-container .card {
+  padding: 20px;
+  border-radius: 16px;
+  border: 1px solid #ff900e;
+}
+.card-title {
+  margin-top: 5px;
+  color: #424242;
+  font-size: 2.5rem;
+  font-weight: 600;
+  text-align: center;
+  margin-bottom: 0px;
+}
+.card-desc {
+  text-align: center;
+  margin-top: 3px;
+  color: #727272;
+  font-size: 1rem;
+  font-weight: 600;
+}
+
 /* responsive styles */
+
+/* for mobiles */
 @media screen and (max-width: 576px) {
   nav {
     flex-direction: column;
@@ -212,7 +262,17 @@ main {
   .experience-badge p {
     font-size: 1rem;
   }
+  .facts-content {
+    margin: 5px;
+  }
+  .facts-card-container {
+    flex-direction: column;
+    gap: 10px;
+  }
 }
+
+/* Responsive for ipads */
+
 @media screen and (min-width: 576px) and (max-width: 960px) {
   nav {
     flex-direction: column;
@@ -228,10 +288,10 @@ main {
     margin-bottom: 0.5rem;
     margin-left: 13rem;
   }
-}
-.features {
-  flex-direction: column;
-}
-.feature-img img {
-  margin: 10px 60px;
+  .features {
+    flex-direction: column;
+  }
+  .feature-img img {
+    margin: 10px 60px;
+  }
 }
