--- a/styles/architect.css
+++ b/styles/architect.css
@@ -193,7 +193,7 @@ main {
 }
 .facts-card-container img {
   width: 40px;
-  margin: 0 45%;
+  margin: 0 43%;
 }
 .facts-card-container .card {
   padding: 20px;
@@ -214,6 +214,28 @@ main {
   color: #727272;
   font-size: 1rem;
   font-weight: 600;
+}
+
+.sponsors-content {
+  margin-top: 150px;
+  text-align: center;
+}
+.sponsor-title {
+  color: #424242;
+  font-size: 2.5rem;
+  font-weight: 600;
+  margin-bottom: 0;
+}
+.sponsor-desc {
+  margin-top: 3px;
+  color: #727272;
+  font-size: 1rem;
+  font-weight: 600;
+}
+.sponsor-img-container {
+  margin-top: 50px;
+  display: flex;
+  justify-content: space-around;
 }
 
 /* responsive styles */
@@ -268,6 +290,11 @@ main {
   .facts-card-container {
     flex-direction: column;
     gap: 10px;
+  }
+  .sponsor-img-container {
+    align-items: center;
+    flex-direction: column-reverse;
+    gap: 20px;
   }
 }
 
